お気に入りアーティスト編集 ContentProviderで取得